# doodle-diary

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
database/: models.py
routes/: diary.py  user.py
services/: ai_service.py
static/css/: style.css
static/js/: app.js
templates/: base.html  diary.html  index.html
