[project]
name = "doodle-diary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic==0.28.0",
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-limiter==3.8.0",
    "gunicorn==22.0.0",
    "openai>=2.37.0",
    "pillow==10.4.0",
    "python-dotenv==1.0.1",
    "redis==5.0.8",
    "requests==2.32.3",
]
